--- a/style/style.css
+++ b/style/style.css
@@ -79,7 +79,7 @@ line-height: normal;
     text-align: justify;
     position: relative;
     display: flex;
-    background-color:  linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    
     height: 100%;
     width: 100%;
 }
@@ -165,7 +165,7 @@ line-height: normal;
 }
 .soon{
     position: relative;
-    top45px
+    top: 45px;
     color: #070211;
 font-family: Merriweather;
 font-size: 48px;
@@ -216,7 +216,39 @@ line-height: 32px;
     left: 80px;
 }
 .images{
-    display: inline-flex;
-    width: 424px;
+    column-gap: 10px;
+    display: flex;
+    border: 8px solid white;
+    border-radius: 30px;
+    width: 100%;
     height: 450px;
+    padding-left: 15px;
+}
+.chobi{
+    column-gap: 10px;
+    display: flex;
+    border: 8px solid white;
+    border-radius: 30px;
+    max-width: 500px;
+    width: 100%;
+    height: 450px;
+    padding-left: 15px;
+}
+.gift{
+    color: #F00;
+    font-size: 20px;
+    padding-left: 15px;
+}
+.portfolio{
+    font-size: 40px;
+    padding-left: 15px;
+}
+.product{
+    color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 32px;
+padding-left: 15px;
 }
