--- a/style/style.css
+++ b/style/style.css
@@ -252,3 +252,33 @@ font-weight: 400;
 line-height: 32px;
 padding-left: 15px;
 }
+.form{
+    display: grid;
+    text-align: center;
+    background-color: #f5e2e2;
+    padding: 100px 386px 100px 385px;
+    margin-top: 100px;
+    
+}
+.offer{
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 15px;
+    font-family: Inter;
+}
+.sub{
+    background-color: #F00;
+    border: none;
+    border-radius: 5%;
+    color: #FFF;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 10px 10px 10px 10px;
+    
+    }
+#email{
+    border: none;
+    border-top-left-radius: 20px ;
+    border-bottom-left-radius: 20px;
+    padding: 10px 10px 10px 10px;
+    
+}
